--- a/Addgrouplink.html
+++ b/Addgrouplink.html
@@ -7,82 +7,164 @@
   <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-app.js"></script>
   <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-firestore.js"></script>
   <script src="https://cdn.tailwindcss.com"></script>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+  <style>
+    .line-clamp-2 { display: -webkit-box; -webkit-line-clamp: 2; -webkit-box-orient: vertical; overflow: hidden; }
+  </style>
 </head>
-<body class="bg-gradient-to-br from-purple-500 via-pink-500 to-red-500 min-h-screen p-4 md:p-8">
-  <div class="max-w-2xl mx-auto">
-    <div class="text-center mb-12">
-      <h1 class="text-4xl md:text-6xl font-black bg-gradient-to-r from-yellow-400 to-orange-500 bg-clip-text text-transparent mb-4">➕ Add Your Group</h1>
-      <p class="text-xl md:text-2xl text-white/90 font-bold">Instant Live on Join Groups Page!</p>
-    </div>
-
-    <div class="bg-white/20 backdrop-blur-xl rounded-3xl p-6 md:p-12 border border-white/40 shadow-2xl">
-      <form id="groupForm">
-        <div class="space-y-6">
-          <div>
-            <label class="block text-white font-bold text-xl mb-4">📛 Group Name</label>
-            <input type="text" id="groupName" required placeholder="Ludo King Cash League" class="w-full p-5 rounded-2xl text-xl bg-white/50 backdrop-blur-xl border-2 border-white/30 focus:border-yellow-400">
-          </div>
-
-          <div class="grid grid-cols-1 md:grid-cols-2 gap-6">
-            <div>
-              <label class="block text-white font-bold text-xl mb-4">🏷️ Category</label>
-              <select id="groupCategory" required class="w-full p-5 rounded-2xl text-xl bg-white/50 backdrop-blur-xl border-2 border-white/30 focus:border-yellow-400">
-                <option value="">Select Category</option>
-                <option value="Ludo King">🎲 Ludo King</option>
-                <option value="Ludo Star">⭐ Ludo Star</option>
-                <option value="Betting">💰 Betting</option>
-                <option value="Earning">💵 Earning</option>
-              </select>
-            </div>
-            <div>
-              <label class="block text-white font-bold text-xl mb-4">👥 Members</label>
-              <input type="number" id="members" min="10" required placeholder="150" class="w-full p-5 rounded-2xl text-xl bg-white/50 backdrop-blur-xl border-2 border-white/30 focus:border-yellow-400">
-            </div>
-          </div>
-
-          <div>
-            <label class="block text-white font-bold text-xl mb-4">🔗 WhatsApp Link</label>
-            <input type="url" id="groupLink" required placeholder="https://chat.whatsapp.com/..." class="w-full p-5 rounded-2xl text-xl bg-white/50 backdrop-blur-xl border-2 border-white/30 focus:border-yellow-400">
-          </div>
-
-          <div>
-            <label class="block text-white font-bold text-xl mb-4">📄 Description</label>
-            <textarea id="groupDesc" required rows="4" placeholder="Daily tournaments, Paytm payouts, 24/7 active..." class="w-full p-5 rounded-2xl text-xl bg-white/50 backdrop-blur-xl border-2 border-white/30 focus:border-yellow-400 resize-vertical"></textarea>
-          </div>
-
-          <button type="submit" id="submitBtn" class="w-full bg-gradient-to-r from-emerald-500 to-teal-600 hover:from-emerald-600 hover:to-teal-700 text-white py-6 px-8 rounded-3xl font-black text-2xl shadow-2xl hover:shadow-3xl transition-all duration-300 hover:-translate-y-2">
-            🚀 Add LIVE Instantly!
-          </button>
+<body class="bg-gray-50">
+  <!-- HEADER -->
+  <header class="bg-gradient-to-r from-purple-600 via-pink-600 to-red-600 text-white shadow-2xl sticky top-0 z-50">
+    <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
+      <div class="flex justify-between items-center py-4">
+        <div class="flex items-center space-x-3">
+          <i class="fas fa-dice text-4xl text-yellow-400"></i>
+          <h1 class="text-3xl md:text-4xl font-black">JokerLudo</h1>
         </div>
-      </form>
-
-      <div id="successMsg" class="mt-8 p-8 bg-emerald-500/30 backdrop-blur-xl rounded-3xl border-2 border-emerald-400/50 hidden">
-        <div class="text-center">
-          <div class="w-24 h-24 bg-emerald-400/30 rounded-3xl flex items-center justify-center mx-auto mb-6">
-            <i class="fas fa-check text-4xl text-emerald-400"></i>
-          </div>
-          <h2 class="text-3xl font-black text-white mb-4">✅ SUCCESS!</h2>
-          <p class="text-xl text-white/90 mb-6">Your group is now <strong class="text-emerald-300">LIVE</strong> on Join Groups!</p>
-          <a href="join.html" class="inline-block bg-emerald-600 hover:bg-emerald-700 text-white px-8 py-4 rounded-2xl font-bold text-xl shadow-xl hover:shadow-2xl transition-all">
-            👥 View Live Groups
-          </a>
-        </div>
+        <nav class="hidden md:flex space-x-8">
+          <a href="join.html" class="text-xl font-bold hover:text-yellow-300 transition-colors">👥 Live Groups</a>
+          <a href="Addgrouplink.html" class="text-xl font-bold text-yellow-300 border-b-4 border-yellow-300 pb-1">➕ Add Group</a>
+          <a href="admin.html" class="text-xl font-bold hover:text-yellow-300 transition-colors">🔧 Admin</a>
+        </nav>
+        <button class="md:hidden p-2" onclick="toggleMobileMenu()">
+          <i class="fas fa-bars text-2xl" id="mobileMenuIcon"></i>
+        </button>
       </div>
-
-      <div id="errorMsg" class="mt-8 p-8 bg-red-500/30 backdrop-blur-xl rounded-3xl border-2 border-red-400/50 hidden">
-        <div class="text-center">
-          <div class="w-24 h-24 bg-red-400/30 rounded-3xl flex items-center justify-center mx-auto mb-6">
-            <i class="fas fa-exclamation-triangle text-4xl text-red-400"></i>
-          </div>
-          <h2 class="text-3xl font-black text-white mb-4">❌ Error</h2>
-          <p id="errorText" class="text-xl text-white/90 mb-6">Check console (F12) for details</p>
-        </div>
+      <!-- Mobile Menu -->
+      <div id="mobileMenu" class="md:hidden bg-white/90 backdrop-blur-xl rounded-2xl p-4 mb-4 space-y-4 hidden">
+        <a href="join.html" class="block p-3 text-xl font-bold text-gray-800 hover:bg-purple-100 rounded-xl">👥 Live Groups</a>
+        <a href="Addgrouplink.html" class="block p-3 text-xl font-bold text-yellow-600 bg-yellow-100 rounded-xl">➕ Add Group</a>
+        <a href="admin.html" class="block p-3 text-xl font-bold text-gray-800 hover:bg-purple-100 rounded-xl">🔧 Admin</a>
       </div>
     </div>
-  </div>
+  </header>
+
+  <!-- MAIN CONTENT -->
+  <main class="min-h-screen py-12 px-4">
+    <div class="max-w-2xl mx-auto">
+      <div class="text-center mb-12">
+        <h1 class="text-4xl md:text-6xl font-black bg-gradient-to-r from-yellow-400 to-orange-500 bg-clip-text text-transparent mb-4">➕ Add Your Group</h1>
+        <p class="text-xl md:text-2xl text-gray-700 font-bold">Instant Live on Join Groups Page!</p>
+      </div>
+
+      <div class="bg-white/80 backdrop-blur-xl rounded-3xl p-8 md:p-12 border border-white/40 shadow-2xl">
+        <form id="groupForm">
+          <div class="space-y-6">
+            <div>
+              <label class="block text-gray-800 font-bold text-xl mb-4">📛 Group Name</label>
+              <input type="text" id="groupName" required placeholder="Ludo King Cash League" class="w-full p-5 rounded-2xl text-xl bg-white border-2 border-gray-200 focus:border-yellow-400 focus:ring-4 focus:ring-yellow-400/50 shadow-lg">
+            </div>
+
+            <div class="grid grid-cols-1 md:grid-cols-2 gap-6">
+              <div>
+                <label class="block text-gray-800 font-bold text-xl mb-4">🏷️ Category</label>
+                <select id="groupCategory" required class="w-full p-5 rounded-2xl text-xl bg-white border-2 border-gray-200 focus:border-yellow-400 shadow-lg">
+                  <option value="">Select Category</option>
+                  <option value="Ludo King">🎲 Ludo King</option>
+                  <option value="Ludo Star">⭐ Ludo Star</option>
+                  <option value="Betting">💰 Betting</option>
+                  <option value="Earning">💵 Earning</option>
+                </select>
+              </div>
+              <div>
+                <label class="block text-gray-800 font-bold text-xl mb-4">👥 Members</label>
+                <input type="number" id="members" min="10" required placeholder="150" class="w-full p-5 rounded-2xl text-xl bg-white border-2 border-gray-200 focus:border-yellow-400 shadow-lg">
+              </div>
+            </div>
+
+            <div>
+              <label class="block text-gray-800 font-bold text-xl mb-4">🔗 WhatsApp Link</label>
+              <input type="url" id="groupLink" required placeholder="https://chat.whatsapp.com/..." class="w-full p-5 rounded-2xl text-xl bg-white border-2 border-gray-200 focus:border-yellow-400 shadow-lg">
+            </div>
+
+            <div>
+              <label class="block text-gray-800 font-bold text-xl mb-4">📄 Description</label>
+              <textarea id="groupDesc" required rows="4" placeholder="Daily tournaments, Paytm payouts, 24/7 active..." class="w-full p-5 rounded-2xl text-xl bg-white border-2 border-gray-200 focus:border-yellow-400 shadow-lg resize-vertical"></textarea>
+            </div>
+
+            <button type="submit" id="submitBtn" class="w-full bg-gradient-to-r from-emerald-500 to-teal-600 hover:from-emerald-600 hover:to-teal-700 text-white py-6 px-8 rounded-3xl font-black text-2xl shadow-2xl hover:shadow-3xl transition-all duration-300 hover:-translate-y-2">
+              🚀 Add LIVE Instantly!
+            </button>
+          </div>
+        </form>
+
+        <!-- Success/Error Messages -->
+        <div id="successMsg" class="mt-8 p-8 bg-emerald-100/80 backdrop-blur-xl rounded-3xl border-2 border-emerald-300 hidden">
+          <div class="text-center">
+            <i class="fas fa-check-circle text-6xl text-emerald-500 mb-6"></i>
+            <h2 class="text-3xl font-black text-emerald-800 mb-4">✅ SUCCESS!</h2>
+            <p class="text-xl text-gray-800 mb-6">Your group is now LIVE on Join Groups!</p>
+            <a href="join.html" class="inline-block bg-emerald-600 hover:bg-emerald-700 text-white px-8 py-4 rounded-2xl font-bold text-xl shadow-xl hover:shadow-2xl transition-all">
+              👥 View Live Groups
+            </a>
+          </div>
+        </div>
+
+        <div id="errorMsg" class="mt-8 p-8 bg-red-100/80 backdrop-blur-xl rounded-3xl border-2 border-red-300 hidden">
+          <div class="text-center">
+            <i class="fas fa-exclamation-triangle text-6xl text-red-500 mb-6"></i>
+            <h2 class="text-3xl font-black text-red-800 mb-4">❌ Error</h2>
+            <p id="errorText" class="text-xl text-gray-800 mb-6">Check console (F12) for details</p>
+          </div>
+        </div>
+      </div>
+    </div>
+  </main>
+
+  <!-- FOOTER -->
+  <footer class="bg-gradient-to-r from-gray-800 to-gray-900 text-white py-12 mt-20">
+    <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
+      <div class="grid md:grid-cols-4 gap-8">
+        <div>
+          <div class="flex items-center space-x-3 mb-6">
+            <i class="fas fa-dice text-4xl text-yellow-400"></i>
+            <h3 class="text-2xl font-black">JokerLudo</h3>
+          </div>
+          <p class="text-gray-400 text-lg">Best Ludo WhatsApp Groups - Join & Play Now!</p>
+        </div>
+        <div>
+          <h4 class="text-xl font-bold mb-6">Quick Links</h4>
+          <ul class="space-y-3">
+            <li><a href="join.html" class="text-gray-400 hover:text-white transition-colors">👥 Live Groups</a></li>
+            <li><a href="Addgrouplink.html" class="text-gray-400 hover:text-white transition-colors">➕ Add Group</a></li>
+            <li><a href="admin.html" class="text-gray-400 hover:text-white transition-colors">🔧 Admin</a></li>
+          </ul>
+        </div>
+        <div>
+          <h4 class="text-xl font-bold mb-6">Categories</h4>
+          <ul class="space-y-3">
+            <li><i class="fas fa-dice text-yellow-400 mr-2"></i><span class="text-gray-400">Ludo King</span></li>
+            <li><i class="fas fa-star text-yellow-400 mr-2"></i><span class="text-gray-400">Ludo Star</span></li>
+            <li><i class="fas fa-coins text-yellow-400 mr-2"></i><span class="text-gray-400">Betting</span></li>
+            <li><i class="fas fa-dollar-sign text-yellow-400 mr-2"></i><span class="text-gray-400">Earning</span></li>
+          </ul>
+        </div>
+        <div>
+          <h4 class="text-xl font-bold mb-6">Contact</h4>
+          <p class="text-gray-400 mb-4">Join 10K+ active players daily!</p>
+          <div class="flex space-x-4">
+            <a href="#" class="w-12 h-12 bg-purple-600 hover:bg-purple-700 rounded-2xl flex items-center justify-center text-xl transition-all"><i class="fab fa-whatsapp"></i></a>
+            <a href="#" class="w-12 h-12 bg-blue-600 hover:bg-blue-700 rounded-2xl flex items-center justify-center text-xl transition-all"><i class="fab fa-telegram"></i></a>
+            <a href="#" class="w-12 h-12 bg-gray-700 hover:bg-gray-600 rounded-2xl flex items-center justify-center text-xl transition-all"><i class="fab fa-instagram"></i></a>
+          </div>
+        </div>
+      </div>
+      <div class="border-t border-gray-700 pt-8 mt-12 text-center">
+        <p class="text-gray-400">&copy; 2026 JokerLudo. All rights reserved. | Made with ❤️ for Ludo Lovers</p>
+      </div>
+    </div>
+  </footer>
 
   <script>
-    // YOUR PERFECT CONFIG
+    function toggleMobileMenu() {
+      const menu = document.getElementById('mobileMenu');
+      const icon = document.getElementById('mobileMenuIcon');
+      menu.classList.toggle('hidden');
+      icon.classList.toggle('fa-bars');
+      icon.classList.toggle('fa-times');
+    }
+
+    // Firebase Config
     const firebaseConfig = {
       apiKey: "AIzaSyAMhdxU4pDqby11Ymixup2aCoEY5eZ3e7M",
       authDomain: "jokerludogroup-a8c97.firebaseapp.com",
@@ -120,16 +202,13 @@
           timestamp: firebase.firestore.FieldValue.serverTimestamp()
         };
 
-        console.log('📤 Adding:', groupData);
         await db.collection('ludoGroups').add(groupData);
-        
-        console.log('✅ SUCCESS!');
         btn.style.display = 'none';
         successMsg.classList.remove('hidden');
         
       } catch (error) {
-        console.error('❌ ERROR:', error);
-        errorText.textContent = error.message;
+        console.error('Error:', error);
+        document.getElementById('errorText').textContent = error.message;
         errorMsg.classList.remove('hidden');
         btn.innerHTML = '❌ Try Again';
         btn.disabled = false;
